--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>To-Do List</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
     <header class="header">
+      <h1 class="top">To-Do Lista</h1>
         <div class="col1">
     <label for="input" class="label">Skriv en ToDo</label>
         <input type="text" class="input" id="input" placeholder="Skriv en To-do" value="" required>
@@ -40,7 +41,7 @@
 
 
     </main>
-    <script src="todo.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
